# bitshift-variations-rusted

./: Cargo.toml  README.md  bitshift-variations-midified.mid
c/: README.md  bit-var.out  build.sh  check-if-correct.sh  interpret-c.sh  main.c
src/: extract_notes.rs  lib.rs  main.rs
